quick spacing fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -63,10 +63,9 @@ table {
     width: 100%;
     text-align: left;
     border-spacing: 50px 10px;
-    margin-left: -75px;
+    margin-left: -50px;
     margin-top: 75px;
     margin-bottom: 150px;
-   
 }
 
 th {
